syntax = "proto3";

package tg_parser;

option go_package = "./;parserv1";


service TgParser {
    // Send request parser to parse tg channel information
    rpc ParseNewChannel (NewChannelRequest) returns (NewChannelResponse);
    // Send request parser to parse tg channel messages
    rpc ParseMessages (ParseMessagesRequest) returns (ParseMessagesResponse);
    // Receive messages by channel channel id
    rpc GetChennelMessages (GetMessagesRequest) returns (GetMessagesResponse);
}

message Message {
    string type = 1; // message type: text, media text_media...
    string text = 2; // message text
    string html_text = 3; // telegram message with all text formating
    string link = 4; // tg message link
    int64 msg_id = 5; // tg internal message id
    int64 date = 6; // UTC UNIX time of message was puplicated
    repeated string photo_urls = 7; // tg message media photo url WARNING! telegram media links expire
}

message NewChannelRequest {
    string channelID = 1; // internal channel ID
    string username = 2; // channel username
}

message NewChannelResponse {
    bool success = 1;
    string username = 2; // channel username
    string name = 3; // channel name
    string description = 4; // channel description
    int32 msg_interval = 5; // medium interval between messages
}

message ParseMessagesRequest {
    string channelID = 1; // channel ID
    string username = 2; // username without @
}

message ParseMessagesResponse {
    bool success = 1;
    int32 msg_interval = 2; // medium interval between messages
}

message GetMessagesRequest {
    int64 id = 1; // channel username
    int32 limit = 2; 
    int32 offset = 3;

}
message GetMessagesResponse {
    bool success = 1;
    repeated Message messages = 2;
}